# INTELLIDRAFT

./: .gitignore  README.md  call_gpt.py  package-lock.json  requirements.txt
api/: main.py
backend/: db.py  (+3 more)
src/Latex_editor/: .cursorrules  README.md  STRATEGY.md  __init__.py  pyproject.toml  requirements.txt
src/Latex_editor/app/: __init__.py  main.py
src/Latex_editor/app/agents/: __init__.py  doc_summary.py  editor_agent.py  llm_client.py  router_agent.py
src/Latex_editor/app/api/: __init__.py  dependencies.py
src/Latex_editor/app/core/: __init__.py  config.py  db_client.py  groq_llm_client.py  in_memory_db.py  llm_client.py  supabase_db.py
src/Latex_editor/app/domain/: __init__.py
src/Latex_editor/app/editor/: __init__.py  patch_validator.py  patch_writer.py  surgical_writer.py  validation.py
src/Latex_editor/app/parser/: __init__.py  bib_parser.py  document_parser.py  protected_regions.py  section_indexer.py  zone_detector.py
src/Latex_editor/app/services/: __init__.py  workspace_manager.py
src/Latex_editor/app/usecases/: __init__.py  latex_edit_service.py  session_service.py  workspace_service.py
src/Latex_editor/app/utils/: __init__.py  hashing.py  regex_patterns.py
src/Latex_editor/database/: schema.sql
src/Latex_editor/database/migrations/: .gitkeep
src/Latex_editor/docs/: architecture.md  cursor-instructions.md  data-flow.md
src/Latex_editor/reference/acm/: README.md
src/Latex_editor/tests/: conftest.py
src/Latex_editor/tests/test_agents/: test_doc_summary.py  test_editor_agent.py  test_llm_client.py  test_router_agent.py
(+114 files in other folders)
